build/log/idf_py_stdout_output_131632
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/lord-daniel/Code/ESP_IDF/ashumitra_own/build/bootloader/esp-idf/esptool_py && /home/lord-daniel/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/lord-daniel/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/lord-daniel/Code/ESP_IDF/ashumitra_own/build/bootloader/bootloader.bin
Bootloader binary size 0x68c0 bytes. 0x740 bytes (6%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
[3/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj 
/home/lord-daniel/.espressif/tools/xtensa-esp32-elf/esp-12.2.0_20230208/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1.6-354-gfb2a72fd53\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/lord-daniel/Code/ESP_IDF/ashumitra_own/build/config -I/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/include -I/home/lord-daniel/esp/esp-idf/components/newlib/platform_include -I/home/lord-daniel/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lord-daniel/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lord-daniel/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/lord-daniel/esp/esp-idf/components/freertos/esp_additions/include -I/home/lord-daniel/esp/esp-idf/components/freertos/esp_additions/arch/xtensa/include -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/include -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/lord-daniel/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/lord-daniel/esp/esp-idf/components/heap/include -I/home/lord-daniel/esp/esp-idf/components/log/include -I/home/lord-daniel/esp/esp-idf/components/soc/include -I/home/lord-daniel/esp/esp-idf/components/soc/esp32 -I/home/lord-daniel/esp/esp-idf/components/soc/esp32/include -I/home/lord-daniel/esp/esp-idf/components/hal/esp32/include -I/home/lord-daniel/esp/esp-idf/components/hal/include -I/home/lord-daniel/esp/esp-idf/components/hal/platform_port/include -I/home/lord-daniel/esp/esp-idf/components/esp_rom/include -I/home/lord-daniel/esp/esp-idf/components/esp_rom/include/esp32 -I/home/lord-daniel/esp/esp-idf/components/esp_rom/esp32 -I/home/lord-daniel/esp/esp-idf/components/esp_common/include -I/home/lord-daniel/esp/esp-idf/components/esp_system/include -I/home/lord-daniel/esp/esp-idf/components/esp_system/port/soc -I/home/lord-daniel/esp/esp-idf/components/esp_system/port/include/private -I/home/lord-daniel/esp/esp-idf/components/xtensa/include -I/home/lord-daniel/esp/esp-idf/components/xtensa/esp32/include -I/home/lord-daniel/esp/esp-idf/components/lwip/include -I/home/lord-daniel/esp/esp-idf/components/lwip/include/apps -I/home/lord-daniel/esp/esp-idf/components/lwip/include/apps/sntp -I/home/lord-daniel/esp/esp-idf/components/lwip/lwip/src/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/freertos/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/lord-daniel/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/lord-daniel/esp/esp-idf/components/driver/include -I/home/lord-daniel/esp/esp-idf/components/driver/deprecated -I/home/lord-daniel/esp/esp-idf/components/driver/analog_comparator/include -I/home/lord-daniel/esp/esp-idf/components/driver/dac/include -I/home/lord-daniel/esp/esp-idf/components/driver/gpio/include -I/home/lord-daniel/esp/esp-idf/components/driver/gptimer/include -I/home/lord-daniel/esp/esp-idf/components/driver/i2c/include -I/home/lord-daniel/esp/esp-idf/components/driver/i2s/include -I/home/lord-daniel/esp/esp-idf/components/driver/ledc/include -I/home/lord-daniel/esp/esp-idf/components/driver/mcpwm/include -I/home/lord-daniel/esp/esp-idf/components/driver/parlio/include -I/home/lord-daniel/esp/esp-idf/components/driver/pcnt/include -I/home/lord-daniel/esp/esp-idf/components/driver/rmt/include -I/home/lord-daniel/esp/esp-idf/components/driver/sdio_slave/include -I/home/lord-daniel/esp/esp-idf/components/driver/sdmmc/include -I/home/lord-daniel/esp/esp-idf/components/driver/sigma_delta/include -I/home/lord-daniel/esp/esp-idf/components/driver/spi/include -I/home/lord-daniel/esp/esp-idf/components/driver/temperature_sensor/include -I/home/lord-daniel/esp/esp-idf/components/driver/touch_sensor/include -I/home/lord-daniel/esp/esp-idf/components/driver/twai/include -I/home/lord-daniel/esp/esp-idf/components/driver/uart/include -I/home/lord-daniel/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/lord-daniel/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/lord-daniel/esp/esp-idf/components/esp_pm/include -I/home/lord-daniel/esp/esp-idf/components/esp_ringbuf/include -I/home/lord-daniel/esp/esp-idf/components/nvs_flash/include -I/home/lord-daniel/esp/esp-idf/components/esp_partition/include -I/home/lord-daniel/esp/esp-idf/components/spi_flash/include -I/home/lord-daniel/esp/esp-idf/components/esp_http_server/include -I/home/lord-daniel/esp/esp-idf/components/http_parser -I/home/lord-daniel/esp/esp-idf/components/esp_event/include -I/home/lord-daniel/Code/ESP_IDF/ashumitra_own/components/cJSON -I/home/lord-daniel/esp/esp-idf/components/esp_wifi/include -I/home/lord-daniel/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/lord-daniel/esp/esp-idf/components/esp_phy/include -I/home/lord-daniel/esp/esp-idf/components/esp_phy/esp32/include -I/home/lord-daniel/esp/esp-idf/components/esp_netif/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/lord-daniel/Code/ESP_IDF/ashumitra_own=. -fmacro-prefix-map=/home/lord-daniel/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/http_server.c.obj -c /home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c: In function 'event_handler':
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c:136:13: error: 's_retry_num' undeclared (first use in this function)
  136 |         if (s_retry_num < MAX_RETRY) {
      |             ^~~~~~~~~~~
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c:136:13: note: each undeclared identifier is reported only once for each function it appears in
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c: At top level:
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c:453:16: error: conflicting types for 'start_webserver'; have 'void *(void)'
  453 | httpd_handle_t start_webserver(void)
      |                ^~~~~~~~~~~~~~~
In file included from /home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/http_server.c:1:
/home/lord-daniel/Code/ESP_IDF/ashumitra_own/main/include/http_server.h:15:6: note: previous declaration of 'start_webserver' with type 'void(void)'
   15 | void start_webserver(void);
      |      ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
